{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 381,
  "lineage": "14270abe-449f-35a8-1186-cd3b6f72aa26",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:021891613818:loadbalancer/app/hama-alb/af1aefd0d4c2f43e",
            "arn_suffix": "app/hama-alb/af1aefd0d4c2f43e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hama-alb-1085912506.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:021891613818:loadbalancer/app/hama-alb/af1aefd0d4c2f43e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hama-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-04694c95a055e9785"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ae05927ddf92a067"
              },
              {
                "subnet_id": "subnet-0f3452ad60f4835ad"
              }
            ],
            "subnets": [
              "subnet-0ae05927ddf92a067",
              "subnet-0f3452ad60f4835ad"
            ],
            "tags": {
              "Name": "hama-alb"
            },
            "tags_all": {
              "Name": "hama-alb"
            },
            "vpc_id": "vpc-0cc3102deecbfcbf6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:021891613818:loadbalancer/app/hama-alb/af1aefd0d4c2f43e"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:021891613818:listener/app/hama-alb/af1aefd0d4c2f43e/70b1370a32b92fa0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:021891613818:targetgroup/hama-tg/8bbc4144b2c8b528",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:021891613818:listener/app/hama-alb/af1aefd0d4c2f43e/70b1370a32b92fa0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:021891613818:loadbalancer/app/hama-alb/af1aefd0d4c2f43e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:021891613818:listener/app/hama-alb/af1aefd0d4c2f43e/70b1370a32b92fa0"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:021891613818:targetgroup/hama-tg/8bbc4144b2c8b528",
            "arn_suffix": "targetgroup/hama-tg/8bbc4144b2c8b528",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:021891613818:targetgroup/hama-tg/8bbc4144b2c8b528",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:021891613818:loadbalancer/app/hama-alb/af1aefd0d4c2f43e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hama-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:021891613818:targetgroup/hama-tg/8bbc4144b2c8b528"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-087126591972bfe96",
            "arn": "arn:aws:ec2:us-east-1:021891613818:instance/i-0a4eca1e93f2bc2d9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hama-3tier-dev-app-profile",
            "id": "i-0a4eca1e93f2bc2d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0731b48996cc3984b"
              }
            ],
            "primary_network_interface_id": "eni-0731b48996cc3984b",
            "private_dns": "ip-10-0-3-196.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.196",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008efde9f31218a13",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-007d863f42368d30d",
            "tags": {
              "Env": "dev",
              "Name": "hama-3tier-dev-app-0",
              "Project": "hama-3tier",
              "Role": "app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hama-3tier-dev-app-0",
              "Project": "hama-3tier",
              "Role": "app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d4b2611a1f78765"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "i-0a4eca1e93f2bc2d9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.data.aws_ami.al2023",
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-087126591972bfe96",
            "arn": "arn:aws:ec2:us-east-1:021891613818:instance/i-0d534be93fea851b4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hama-3tier-dev-app-profile",
            "id": "i-0d534be93fea851b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cc5703792fd57707"
              }
            ],
            "primary_network_interface_id": "eni-0cc5703792fd57707",
            "private_dns": "ip-10-0-4-87.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.87",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03e08cd6402215656",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063e9be7dabcdfc3d",
            "tags": {
              "Env": "dev",
              "Name": "hama-3tier-dev-app-1",
              "Project": "hama-3tier",
              "Role": "app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hama-3tier-dev-app-1",
              "Project": "hama-3tier",
              "Role": "app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d4b2611a1f78765"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "i-0d534be93fea851b4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.data.aws_ami.al2023",
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:021891613818:targetgroup/hama-tg/8bbc4144b2c8b528-20251103032222530600000009",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:021891613818:targetgroup/hama-tg/8bbc4144b2c8b528",
            "target_id": "i-0a4eca1e93f2bc2d9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.this",
            "module.ec2.aws_iam_instance_profile.profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.aws_instance.app",
            "module.ec2.data.aws_ami.al2023",
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:021891613818:targetgroup/hama-tg/8bbc4144b2c8b528-2025110303222261820000000a",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:021891613818:targetgroup/hama-tg/8bbc4144b2c8b528",
            "target_id": "i-0d534be93fea851b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.this",
            "module.ec2.aws_iam_instance_profile.profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.aws_instance.app",
            "module.ec2.data.aws_ami.al2023",
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:security-group/sg-02de81bbb8edd559e",
            "description": "RDS SG for hama-3tier-dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02de81bbb8edd559e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow DB port 3306 from ec2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d4b2611a1f78765"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "hama-3tier-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "021891613818",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Module": "rds",
              "Owner": "platform",
              "Project": "hama-3tier"
            },
            "tags_all": {
              "Env": "dev",
              "Module": "rds",
              "Owner": "platform",
              "Project": "hama-3tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "sg-02de81bbb8edd559e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1221363952",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-02de81bbb8edd559e",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_from_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow DB port 3306 from ec2",
            "from_port": 3306,
            "id": "sgrule-399609960",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-02de81bbb8edd559e",
            "security_group_rule_id": "sgr-0cfdc1d2fb8e293f1",
            "self": false,
            "source_security_group_id": "sg-05d4b2611a1f78765",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_security_group.this",
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:security-group/sg-04694c95a055e9785",
            "description": "Allow HTTP/HTTPS from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04694c95a055e9785",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "021891613818",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "sg-04694c95a055e9785",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:security-group/sg-05d4b2611a1f78765",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d4b2611a1f78765",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04694c95a055e9785"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "021891613818",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "sg-05d4b2611a1f78765",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:security-group/sg-0401639aac627b389",
            "description": "Allow PostgreSQL from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0401639aac627b389",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d4b2611a1f78765"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "021891613818",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "sg-0401639aac627b389",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:internet-gateway/igw-041e8a82769f72f86",
            "id": "igw-041e8a82769f72f86",
            "owner_id": "021891613818",
            "region": "us-east-1",
            "tags": {
              "Name": "hama-3tier-dev-igw"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-igw"
            },
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-041e8a82769f72f86",
            "id": "r-rtb-067d098232119fb551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-067d098232119fb55",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-067d098232119fb55"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:route-table/rtb-067d098232119fb55",
            "id": "rtb-067d098232119fb55",
            "owner_id": "021891613818",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-041e8a82769f72f86",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hama-3tier-dev-public-rtb"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "rtb-067d098232119fb55",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c4aeae2382d78c3",
            "region": "us-east-1",
            "route_table_id": "rtb-067d098232119fb55",
            "subnet_id": "subnet-0f3452ad60f4835ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b0abe7deebad233",
            "region": "us-east-1",
            "route_table_id": "rtb-067d098232119fb55",
            "subnet_id": "subnet-0ae05927ddf92a067"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.5.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:subnet/subnet-00eb74629949fcab6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00eb74629949fcab6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891613818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hama-3tier-dev-db-10.0.5.0/24"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-db-10.0.5.0/24"
            },
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "subnet-00eb74629949fcab6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "10.0.6.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:subnet/subnet-04f5edd3d04ed3e98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f5edd3d04ed3e98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891613818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hama-3tier-dev-db-10.0.6.0/24"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-db-10.0.6.0/24"
            },
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "subnet-04f5edd3d04ed3e98",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:subnet/subnet-007d863f42368d30d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007d863f42368d30d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891613818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hama-3tier-dev-private-10.0.3.0/24"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-private-10.0.3.0/24"
            },
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "subnet-007d863f42368d30d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:subnet/subnet-063e9be7dabcdfc3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063e9be7dabcdfc3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891613818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hama-3tier-dev-private-10.0.4.0/24"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-private-10.0.4.0/24"
            },
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "subnet-063e9be7dabcdfc3d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:subnet/subnet-0f3452ad60f4835ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3452ad60f4835ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891613818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hama-3tier-dev-public-10.0.1.0/24"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-public-10.0.1.0/24"
            },
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "subnet-0f3452ad60f4835ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:subnet/subnet-0ae05927ddf92a067",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae05927ddf92a067",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891613818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hama-3tier-dev-public-10.0.2.0/24"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-public-10.0.2.0/24"
            },
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "subnet-0ae05927ddf92a067",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:vpc/vpc-0cc3102deecbfcbf6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c24abf89446f23fe",
            "default_route_table_id": "rtb-0485bfe28ab464f27",
            "default_security_group_id": "sg-0d062b294bd4f49e8",
            "dhcp_options_id": "dopt-0a77257800e2de64d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc3102deecbfcbf6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0485bfe28ab464f27",
            "owner_id": "021891613818",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "hama-3tier-dev-vpc",
              "Project": "hama-3tier"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hama-3tier-dev-vpc",
              "Project": "hama-3tier"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "vpc-0cc3102deecbfcbf6",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpce",
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:vpc/vpc-0cc3102deecbfcbf6",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0502e9d7130ae8fc3",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a77257800e2de64d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc3102deecbfcbf6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0485bfe28ab464f27",
            "owner_id": "021891613818",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "hama-3tier-dev-vpc",
              "Project": "hama-3tier"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpce",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:security-group/sg-01935976048769817",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01935976048769817",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d4b2611a1f78765"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hama-3tier-dev-vpce-sg",
            "name_prefix": "",
            "owner_id": "021891613818",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "sg-01935976048769817",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpce",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:vpc-endpoint/vpce-0de5c5a3b898f406f",
            "dns_entry": [
              {
                "dns_name": "vpce-0de5c5a3b898f406f-parpqj8w.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0de5c5a3b898f406f-parpqj8w-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0de5c5a3b898f406f-parpqj8w-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05909792OK18MH12V62A"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0de5c5a3b898f406f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0664d81037043dd3a",
              "eni-09c7f0cb91beea340"
            ],
            "owner_id": "021891613818",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-01935976048769817"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.227",
                "subnet_id": "subnet-007d863f42368d30d"
              },
              {
                "ipv4": "10.0.4.88",
                "subnet_id": "subnet-063e9be7dabcdfc3d"
              }
            ],
            "subnet_ids": [
              "subnet-007d863f42368d30d",
              "subnet-063e9be7dabcdfc3d"
            ],
            "tags": {
              "Name": "hama-3tier-dev-vpce-ec2messages"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-vpce-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "vpce-0de5c5a3b898f406f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpce.aws_security_group.vpce",
            "module.vpce.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpce",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:vpc-endpoint/vpce-07cedc3129269efec",
            "dns_entry": [
              {
                "dns_name": "vpce-07cedc3129269efec-h87rinrr.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07cedc3129269efec-h87rinrr-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07cedc3129269efec-h87rinrr-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08799872IKY3CMAJ7PTB"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08772272V901F2G2OCOG"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z08772261EZR00YR761EA"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0352398ETTFY0N1BPEX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07cedc3129269efec",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-035cbcc35379e090b",
              "eni-0afacc5040226fedf"
            ],
            "owner_id": "021891613818",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-01935976048769817"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.16",
                "subnet_id": "subnet-007d863f42368d30d"
              },
              {
                "ipv4": "10.0.4.247",
                "subnet_id": "subnet-063e9be7dabcdfc3d"
              }
            ],
            "subnet_ids": [
              "subnet-007d863f42368d30d",
              "subnet-063e9be7dabcdfc3d"
            ],
            "tags": {
              "Name": "hama-3tier-dev-vpce-logs"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-vpce-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "vpce-07cedc3129269efec",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpce.aws_security_group.vpce",
            "module.vpce.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpce",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:vpc-endpoint/vpce-0521c558902c453d0",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0521c558902c453d0",
            "ip_address_type": "ipv4",
            "owner_id": "021891613818",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0485bfe28ab464f27"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "hama-3tier-dev-vpce-s3"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "vpce-0521c558902c453d0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpce.data.aws_region.current",
            "module.vpce.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpce",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:vpc-endpoint/vpce-012efb54e272583dd",
            "dns_entry": [
              {
                "dns_name": "vpce-012efb54e272583dd-3jaje02p.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-012efb54e272583dd-3jaje02p-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-012efb54e272583dd-3jaje02p-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0884556FV8QDPCJGKJ6"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z04247331A1LLIEI4NEMP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-012efb54e272583dd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-040332c7a26d9fcd2",
              "eni-04c57144a4733840b"
            ],
            "owner_id": "021891613818",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-01935976048769817"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.21",
                "subnet_id": "subnet-007d863f42368d30d"
              },
              {
                "ipv4": "10.0.4.238",
                "subnet_id": "subnet-063e9be7dabcdfc3d"
              }
            ],
            "subnet_ids": [
              "subnet-007d863f42368d30d",
              "subnet-063e9be7dabcdfc3d"
            ],
            "tags": {
              "Name": "hama-3tier-dev-vpce-ssm"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-vpce-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "vpce-012efb54e272583dd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpce.aws_security_group.vpce",
            "module.vpce.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpce",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891613818:vpc-endpoint/vpce-09cfcb79add96af07",
            "dns_entry": [
              {
                "dns_name": "vpce-09cfcb79add96af07-6xe6gji3.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09cfcb79add96af07-6xe6gji3-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09cfcb79add96af07-6xe6gji3-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05915103PZS2A4AQJQ6K"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z04224891PE2Z19Y7IKGV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09cfcb79add96af07",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0aa20343d9e3ce24b",
              "eni-0b63c639b99f72516"
            ],
            "owner_id": "021891613818",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-01935976048769817"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.57",
                "subnet_id": "subnet-007d863f42368d30d"
              },
              {
                "ipv4": "10.0.4.210",
                "subnet_id": "subnet-063e9be7dabcdfc3d"
              }
            ],
            "subnet_ids": [
              "subnet-007d863f42368d30d",
              "subnet-063e9be7dabcdfc3d"
            ],
            "tags": {
              "Name": "hama-3tier-dev-vpce-ssmmessages"
            },
            "tags_all": {
              "Name": "hama-3tier-dev-vpce-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0cc3102deecbfcbf6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "021891613818",
            "id": "vpce-09cfcb79add96af07",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpce.aws_security_group.vpce",
            "module.vpce.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}